[project]
name = "Cat Captions API"
version = "1.0.0"
description = "An API that adds captions to cat pics (and gifs!)"
authors = [
    {name = "MorganTwoZero", email = "90017582+MorganTwoZero@users.noreply.github.com"},
]
dependencies = [
    "Pillow>=9.2.0",
    "httpx>=0.23.0",
    "uvicorn[standard]>=0.18.3",
    "pytest>=7.1.3",
    "starlite>=1.25.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
